software-center (3.1.8) UNRELEASED; urgency=low

  * softwarecenter/backend/restfulclient.py:
    - honor UBUNTU_SSO_SERVICE
  * softwarecenter/plugin.py:
    - ignore plugin init failures

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Dec 2010 15:27:11 +0100

software-center (3.1.7) natty; urgency=low

  [ Michael Vogt ]
  * refactor "SoftwarePane.refresh_apps()" code, this ensures
    the app lists are only ever (re)created if something changes
    and so avoiding nasty UI flashes (code is simpler now as well)
  * softwarecenter/models/appstore.py:
    - fix search ranking for exact package name matches (thanks to
      seb128)
    - display exact pkgname matches even if they are a technical
      item (e.g. nautilus)
  * softwarecenter/view/appview.py:
    - fallback to previous (slower) method to obtain the pkgname
      from xapian if the DB is not yet rebuild (thanks to seb128
      for reporting this problem)
  * softwarecenter/apt/apthistory.py, test/test_apthistory.py:
    - fix apthistory test by allowing noncached operations
  * softwarecenter/models/appstore.py:
    - fix potential crash in tests
  * softwarecenter/db/update.py:
    - test if the db support spelling suggestions before enabling
      them to ensure its not crashing for the inmemory DB
  
  [ Matthew McGowan ]
  * merged lp:~mmcg069/software-center/bubbles, this gives us
    pretty bubbles in the viewswitcher

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/view/catview_gtk.py:
    - thread listview refreshes to restore UI feedback with
      recent experimental-fastlist improvements 
  * test/test_search_per_spec.py:
    - tweak test for threaded listview refreshes
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py:
    - cleanup imports for wait_for_apt_cache_ready

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Dec 2010 15:06:38 +0100
