@@ -1033,9 +1033,12 @@ class AppViewFilter(xapian.MatchDecider):
     def get_supported_only(self):
         return self.supported_only
     def __eq__(self, other):
-        return (self.supported_only == other.supported_only and
-                self.installed_only == other.installed_only and
-                self.not_installed_only == other.not_installed_only)
+        if not other:
+            return False
+        else:
+            return (self.supported_only == other.supported_only and
+                    self.installed_only == other.installed_only and
+                    self.not_installed_only == other.not_installed_only)
     def __ne__(self, other):
         return not self.__eq__(other)
     def __call__(self, doc):
