@@ -1,11 +1,17 @@
 software-center (3.1.8) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * softwarecenter/backend/restfulclient.py:
     - honor UBUNTU_SSO_SERVICE
   * softwarecenter/plugin.py:
     - ignore plugin init failures
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Dec 2010 15:27:11 +0100
+  [ Gary Lasker ]
+  * softwarecenter/view/appview.py:
+    - fix crash in refresh_apps if previous model did
+      not have a filter (LP: #690706)
+
+ -- Gary Lasker <gary.lasker@canonical.com>  Wed, 15 Dec 2010 10:44:08 -0500
 
 software-center (3.1.7) natty; urgency=low
 
